@@ -1,5 +1,7 @@
 Revision history for POE-Component-NetSNMP-agent
 
+        [FEATURE] Added Ping option to automatically recover from a lost
+        connection with the AgentX master.
         [DIST] Add missing prereq parent.pm
 
 0.200   2011.07.11  (SAPER)
